[STYLING]fixed home page about section on mobile view

--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -118,7 +118,7 @@
         background-color: #ffffff;
         border-radius: 20px;
         padding: 3vw 2vw;
-        min-width: 200px;
+        min-width: 250px;
         .head {
           gap: 5px;
           .avatar {
@@ -163,7 +163,8 @@
     }
     .projects {
       padding: 2vw;
-      row-gap: 4rem;
+      gap: 5%;
+      row-gap: 2rem;
       .column {
         width: 45%;
         &:nth-child(1) .image {
@@ -355,6 +356,17 @@
     }
   }
 }
+@media screen and (max-width: 800px) {
+  #testimonial {
+    .inner {
+      .row {
+        .column {
+          width: 100%;
+        }
+      }
+    }
+  }
+}
 @media screen and (max-width: 833px) {
   #counter {
     .inner {
@@ -371,22 +383,49 @@
 }
 @media screen and (max-width: 760px) {
   #about {
+    position: relative;
     .inner {
-      // flex-direction: column-reverse;
+      flex-direction: column-reverse;
+      width: 100%;
       .text {
         width: 100%;
+        // transform: translateY(-100%);
+        background-color: #ffffff60;
+        z-index: 2;
+        .widget {
+          padding: 2vw;
+          width: 80%;
+          margin: auto;
+        }
       }
       .img {
-        width: 60%;
+        width: 100%;
+        height: 100%;
+        border-radius: 0 0 0 0;
+        position: absolute;
+        // bottom: 0;
+      }
+    }
+  }
+  #projects {
+    .inner {
+      .projects {
+        gap: 8%;
+        .column {
+          min-width: 90%;
+          .image {
+            border-radius: 0 !important;
+          }
+        }
       }
     }
   }
 }
 @media screen and (max-width: 742px) {
-  #blog{
-    .inner{
-      .row{
-        .column{
+  #blog {
+    .inner {
+      .row {
+        .column {
           min-width: 25rem;
         }
       }
@@ -406,7 +445,7 @@
   }
 }
 @media screen and (max-width: 500px) {
-  .inner{
+  .inner {
     width: 100%;
   }
   #hero {
@@ -416,18 +455,16 @@
   #about {
     .inner {
       // flex-direction: column-reverse;
-      .text {
+      .text .widget {
         width: 100%;
-      }
-      .img {
-        display: none;
+        padding: 2vw 5vw;
       }
     }
   }
-  #testimonial{
-    .inner{
-      .row{
-        .column{
+  #testimonial {
+    .inner {
+      .row {
+        .column {
           width: 100%;
         }
       }
@@ -441,6 +478,20 @@
     }
   }
 }
+@media screen and (max-width: 350px) {
+  #about {
+    .inner {
+      // flex-direction: column-reverse;
+      .text .widget {
+        width: 100%;
+        padding: 2vw 5vw;
+        h2{
+          width: 100%;
+        }
+      }
+    }
+  }
+}
 @media screen and (max-width: 600px) {
   #hero {
     justify-content: center;
@@ -449,19 +500,6 @@
       text-align: center;
       button {
         margin: auto;
-      }
-    }
-  }
-  #projects {
-    .inner {  
-      .projects {
-        gap: 8%;
-        .column {
-          min-width: 90%;
-          .image{
-            border-radius: 0!important;
-          }
-        }
       }
     }
   }
